@@ -1,1 +1,2 @@
 - autosave logging settings
+- make auto-away use [global] for settings
